[package]
name = "probes"
version = "0.2.2"
authors = [
  "Thijs Cadier <thijs@appsignal.com>",
  "Robert Beekman <robert@appsignal.com>",
  "Timon Vonk <mail@timonv.nl>",
  "Tom de Bruijn <tom@appsignal.com>",
  "Adam Yeats <adam@appsignal.com>"
]
description = "Library to read out system stats from a machine running Unix"
readme = "README.md"
repository = "https://github.com/appsignal/probes-rs"
keywords = ["unix", "linux", "probe"]
license = "MIT"

[dependencies]
libc = ">= 0.2.0"
time = ">= 0.1.34"
