[package]
name = "probes"
version = "0.4.0"
authors = ["Thijs Cadier <thijs@appsignal.com>",
           "Robert Beekman <robert@appsignal.com>",
           "Adam Yeats <adam@appsignal.com>",
           "Tom de Bruijn <tom@appsignal.com>",
           "Timon Vonk <mail@timonv.nl>"]
description = "Library to read out system stats from a machine running Unix"
readme = "README.md"
repository = "https://github.com/appsignal/probes-rs/"
keywords = ["unix", "linux", "probe"]
license = "MIT"
edition = "2018"

[dependencies]
libc = "0.2"
time = "0.1.34"
