[package]
name = "probes"
version = "0.7.0"
authors = ["Thijs Cadier <thijs@appsignal.com>",
           "Robert Beekman <robert@appsignal.com>",
           "Timon Vonk <mail@timonv.nl>",
           "Adam Yeats <adam@appsignal.com>",
           "Tom de Bruijn <tom@appsignal.com>"]
description = "Library to read out system stats from a machine running Unix"
readme = "README.md"
repository = "https://github.com/appsignal/probes-rs/"
keywords = ["unix", "linux", "probe"]
license = "MIT"
edition = "2018"

[dependencies]
libc = "0.2"
